[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "package-manager-demo"
version = "1.0.3"
authors = [
  { name="Posit Software, PBC", email="rspm@posit.co" },
]
description = "A Demo Python Package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/rstudio/package-manager-demo"
"Bug Tracker" = "https://github.com/rstudio/package-manager-demo/issues"

[tool.setuptools.packages.find]
where = ["src"]